tests/expand/invalid_usage/clappen_command_without_apply.fail.expanded.rs
fn main() {
    /// Macros used for nested struct definition : []
    pub struct NestedMyStruct {}
    (/*ERROR*/)
}
